[package]
name = "graph-problem"
version = "0.1.0"
authors = ["Ryan-Symplectic <ryan@symcsx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "alias_graph_lib"
path = "src/lib.rs"

[[bin]]
name = "alias_graph"
path = "src/main.rs"

[dependencies]
rand = "0.8.3"
uuid = { version="0.8.2", features=["serde", "v4"] }
